--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Cicada Playground</title>
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+      App doesn't work JavaScript. <br />
+      You can enable it to continue.
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
